--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -178,36 +178,8 @@ body {
   pointer-events: none; /* Garante que as labels não alterem o comportamento de hover dos inputs */
 }
 
-/* Estilo para o seletor de cor */
-.color-picker {
-  margin: 20px 0;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-}
+/* Estilo para o seletor de cor de tema */
 
-.color-picker label {
-  font-size: 1rem;
-  color: var(--cor-branco);
-  margin-right: 10px;
-  font-weight: bold;
-}
-
-.color-picker input {
-  width: 30px;
-  height: 30px;
-  border: none;
-  border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-  cursor: pointer;
-  transition: all 0.3s ease;
-  box-sizing: border-box;
-}
-
-.color-picker input:hover {
-  transform: scale(1.1);
-}
 
 /* FOOTER | CONFIGURAÇÕES ---------------------------------------------------------------------------------------*/
 
